--- a/kubernetes/fluxcd/repositories/infra-repo/apps/example-app-1/gitrepository.yaml
+++ b/kubernetes/fluxcd/repositories/infra-repo/apps/example-app-1/gitrepository.yaml
@@ -6,5 +6,5 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: fluxcd-2022
+    branch: master
   url: https://github.com/vilasvarghese/docker-development-youtube-series
